syntax = "proto3";
package controller;

option go_package = "proto/blockchaindb";

service BCdbNode {
    rpc Get (GetRequest) returns (GetResponse);
    rpc Set (SetRequest) returns (SetResponse);
    rpc Verify (VerifyRequest) returns (VerifyResponse);
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    bytes value = 1;
}

message SetRequest {
    string key = 1;
    string value = 2;
}

message SetResponse {
    string tx = 1;
}

message VerifyRequest {
    string opt = 1;
    string key = 2;
}

message VerifyResponse {
    bool success = 1;
}
